// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`already exported 1`] = `
Array [
  "extracted_ndq7ki.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_red = style({
  color: 'red'
});",
]
`;

exports[`already exported 2`] = `
"import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_ndq7ki.css.ts\\";
import { style } from '@macaron-css/core';
export const red = _$$macaron_red2;
console.log(red);"
`;

exports[`array pattern hoisting 1`] = `
Array [
  "extracted_14e7vm3.css.ts",
  "import { createTheme } from '@macaron-css/core';
export var _$$macaron_themeClass = createTheme({
  colors: {
    brand: 'red'
  }
});",
]
`;

exports[`array pattern hoisting 2`] = `
"import { _$$macaron_themeClass as _$$macaron_themeClass2 } from \\"extracted_14e7vm3.css.ts\\";
import { createTheme } from '@macaron-css/core';
const [themeClass, vars] = _$$macaron_themeClass2;
console.log(themeClass, vars);"
`;

exports[`binding ordering 1`] = `
Array [
  "extracted_meded.css.ts",
  "import { style } from '@macaron-css/core';
const color = 'red';
export var _$$macaron_red = style({
  color
});",
]
`;

exports[`binding ordering 2`] = `
"import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_meded.css.ts\\";
import { style } from '@macaron-css/core';
const color = 'red';
const red = _$$macaron_red2;
const longClass = \`abc \${red}\`;
console.log(longClass);"
`;

exports[`export default style 1`] = `
Array [
  "extracted_5qasdd.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_identifier = style({
  color: 'red'
});",
]
`;

exports[`export default style 2`] = `
"import { _$$macaron_identifier as _$$macaron_identifier2 } from \\"extracted_5qasdd.css.ts\\";
import { style } from '@macaron-css/core';
export default _$$macaron_identifier2;"
`;

exports[`extracts style function 1`] = `
Array [
  "extracted_1sozav4.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_red = style({
  color: 'red'
});",
]
`;

exports[`extracts style function 2`] = `
"import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_1sozav4.css.ts\\";
import { style } from '@macaron-css/core';
const red = _$$macaron_red2;
console.log(red);"
`;

exports[`hoisting same variable name in different scope 1`] = `
Array [
  "extracted_l7klua.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_red = style({
  color: 'red'
});
export var _$$macaron_red3 = style({
  color: 'blue'
});",
]
`;

exports[`hoisting same variable name in different scope 2`] = `
"import { _$$macaron_red3 as _$$macaron_red4 } from \\"extracted_l7klua.css.ts\\";
import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_l7klua.css.ts\\";
import { style } from '@macaron-css/core';
const red = _$$macaron_red2;
console.log(red);

function SomeComponent() {
  const red = _$$macaron_red4;
  console.log(red);
}"
`;

exports[`hoists array member 1`] = `
Array [
  "extracted_rkwtxb.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_arr = style({
  color: 'red'
});
export var _$$macaron_arr3 = style({
  color: 'blue'
});",
]
`;

exports[`hoists array member 2`] = `
"import { _$$macaron_arr3 as _$$macaron_arr4 } from \\"extracted_rkwtxb.css.ts\\";
import { _$$macaron_arr as _$$macaron_arr2 } from \\"extracted_rkwtxb.css.ts\\";
import { style } from '@macaron-css/core';
const arr = [1, 2, _$$macaron_arr2, 4, _$$macaron_arr4];
console.log(arr);"
`;

exports[`hoists inline expression 1`] = `
Array [
  "extracted_47l5xi.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_str = style({
  color: 'red'
});",
]
`;

exports[`hoists inline expression 2`] = `
"import { _$$macaron_str as _$$macaron_str2 } from \\"extracted_47l5xi.css.ts\\";
import { style } from '@macaron-css/core';
const str = \`abc \${_$$macaron_str2}\`;
console.log(str);"
`;

exports[`hoists object property 1`] = `
Array [
  "extracted_2e1qtp.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_key = style({
  color: 'red'
});",
]
`;

exports[`hoists object property 2`] = `
"import { _$$macaron_key as _$$macaron_key2 } from \\"extracted_2e1qtp.css.ts\\";
import { style } from '@macaron-css/core';
const obj = {
  nested: {
    key: _$$macaron_key2
  }
};
console.log(obj);"
`;

exports[`inside block scope 1`] = `
Array [
  "extracted_ugie7r.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_red = style({
  color: 'red'
});",
]
`;

exports[`inside block scope 2`] = `
"import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_ugie7r.css.ts\\";
import { style } from '@macaron-css/core';
{
  const red = _$$macaron_red2;
  console.log(red);
}"
`;

exports[`inside jsx expression 1`] = `
Array [
  "extracted_x1wc72.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_App = style({
  color: 'red'
});",
]
`;

exports[`inside jsx expression 2`] = `
"import { _$$macaron_App as _$$macaron_App2 } from \\"extracted_x1wc72.css.ts\\";
import { style } from '@macaron-css/core';

function App() {
  return <div class={_$$macaron_App2}>Hello</div>;
}

console.log(red);"
`;

exports[`move bindings along with extracted style 1`] = `
Array [
  "extracted_7ip2jg.css.ts",
  "import { style } from '@macaron-css/core';
const redColor = 'red';
export var _$$macaron_red = style({
  color: redColor
});",
]
`;

exports[`move bindings along with extracted style 2`] = `
"import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_7ip2jg.css.ts\\";
import { style } from '@macaron-css/core';
const redColor = 'red';
const red = _$$macaron_red2;
console.log(red);"
`;

exports[`multiple variable declarators in one declaration 1`] = `
Array [
  "extracted_93tetg.css.ts",
  "import { style } from '@macaron-css/core';
export var _$$macaron_red = style({
  color: 'red'
});
export var _$$macaron_blue = style({
  color: 'blue'
});
export var _$$macaron_green = style({
  color: 'green'
});",
]
`;

exports[`multiple variable declarators in one declaration 2`] = `
"import { _$$macaron_green as _$$macaron_green2 } from \\"extracted_93tetg.css.ts\\";
import { _$$macaron_blue as _$$macaron_blue2 } from \\"extracted_93tetg.css.ts\\";
import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_93tetg.css.ts\\";
import { style } from '@macaron-css/core';
const red = _$$macaron_red2,
      blue = _$$macaron_blue2,
      green = _$$macaron_green2;
console.log(red, blue, green);"
`;

exports[`nested bindings 1`] = `
Array [
  "extracted_15sqdx.css.ts",
  "import { style } from '@macaron-css/core';
const theme = {
  color: 'red'
};
const themeColor = theme.color;
const color = themeColor;
export var _$$macaron_red = style({
  color
});",
]
`;

exports[`nested bindings 2`] = `
"import { _$$macaron_red as _$$macaron_red2 } from \\"extracted_15sqdx.css.ts\\";
import { style } from '@macaron-css/core';
const theme = {
  color: 'red'
};
const themeColor = theme.color;
const color = themeColor;
const red = _$$macaron_red2;
console.log(red);"
`;

exports[`react styled components 1`] = `
Array [
  "extracted_5dzqko.css.ts",
  "import { recipe as _recipe } from \\"@macaron-css/core\\";
export var _$$macaron_Button = _recipe({
  base: {
    color: 'red'
  }
});",
]
`;

exports[`react styled components 2`] = `
"import { _$$macaron_Button as _$$macaron_Button2 } from \\"extracted_5dzqko.css.ts\\";
import { recipe as _recipe } from \\"@macaron-css/core\\";
import { $$styled as _$$styled } from \\"@macaron-css/react/runtime\\";

const Button = /* @__PURE__ */_$$styled(\\"button\\", _$$macaron_Button2);

console.log(Button);"
`;

exports[`same binding in multiple declarations 1`] = `
Array [
  "extracted_s8bnpw.css.ts",
  "import { style } from '@macaron-css/core';
const color = 'red';
export var _$$macaron_foreground = style({
  color
});
export var _$$macaron_background = style({
  background: color
});",
]
`;

exports[`same binding in multiple declarations 2`] = `
"import { _$$macaron_background as _$$macaron_background2 } from \\"extracted_s8bnpw.css.ts\\";
import { _$$macaron_foreground as _$$macaron_foreground2 } from \\"extracted_s8bnpw.css.ts\\";
import { style } from '@macaron-css/core';
const color = 'red';
const foreground = _$$macaron_foreground2;
const background = _$$macaron_background2;
console.log(foreground, background);"
`;

exports[`solid styled components 1`] = `
Array [
  "extracted_304vki.css.ts",
  "import { recipe as _recipe } from \\"@macaron-css/core\\";
export var _$$macaron_Button = _recipe({
  base: {
    color: 'red'
  }
});",
]
`;

exports[`solid styled components 2`] = `
"import { _$$macaron_Button as _$$macaron_Button2 } from \\"extracted_304vki.css.ts\\";
import { recipe as _recipe } from \\"@macaron-css/core\\";
import { $$styled as _$$styled } from \\"@macaron-css/solid/runtime\\";

const Button = /* @__PURE__ */_$$styled(\\"button\\", _$$macaron_Button2);

console.log(Button);"
`;
